--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,8 @@
-app:
-  email: app@gmail.com
-  googleAnalyticsId: U-xxxxx
-  authors:
-    - top
-    - atom
-  exampleMap:
-    key1: hello
-    key2: world
+#application.yml
+---
+spring.profiles: local
+spring.profiles.include: common, local
+---
+spring.profiles: aws
+spring.profiles.include: common, aws
+---
